# intelayer

./: .gitignore  0-AMOUNT_FIX_SUMMARY.md  BACKFILL_CHEATSHEET.md  BACKFILL_COMPLETE.md  BACKFILL_DATE_FIX.md  BACKFILL_DEMO.md  BACKFILL_GUIDE.md  BACKFILL_IMPLEMENTATION_SUMMARY.md  BACKFILL_QUICKSTART.md  BACKFILL_SOLUTION.md  BILLS_RECEIVABLE_IMPLEMENTATION.md  CHANGES_SUMMARY.md  COMPLETE_FIX_SUMMARY.md  CREDIT_NOTE_TAX_FIX.md  CUSTOMER_DETAILS_EXTRACTION.md  DATABASE_SCHEMA.md  DAYBOOK_README.md  DUPLICATE_VOUCHER_FIX_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  LEDGER_EXTRACTION_ANALYSIS.md  LEDGER_MASTERS_IMPLEMENTATION.md  LEDGER_MASTER_USAGE.md  LICENSE  Makefile.example  OPTIMAL_RECEIPT_IMPLEMENTATION.md  PINCODE_TABLE_SETUP.md  POST_TAX_AMOUNT_FIX_SUMMARY.md  README.md  SALES_LINES_USAGE.md  SCHEMA_FOR_AI.md  SETUP_INSTRUCTIONS.md  STOCK_MASTER_USAGE.md  TAX_CALCULATION_FIX_SUMMARY.md  VISHWAKARMA_FIX_IMPLEMENTATION.md  VISHWAKARMA_INVESTIGATION_REPORT.md  config.ini  config.ini.example  debug_bills_receivable.py  debug_tally_xml.py  fetch_daybook.py  (+13 more)
adapters/: adapter_types.py
agent/: backfill.py  clear_and_reload.py  compare_reports.py  debug_run.py  ledger_masters.py  reset_checkpoint.py  run.py  sales_lines_from_vreg.py  settings.py  stock_masters.py
ops/: backup.sh  docker-compose.yml  health_check.py  init-db.sh
tally_db_loader/: README.md  __init__.py  __main__.py  client.py  config.py  debug.py  sync.py
tests/: test_amount_signed_and_party_line.py  test_backfill.py  test_bills_receivable.py  test_duplicate_keys.py  test_mst_opening_bill_allocation.py  (+3 more)
(+143 files in other folders)
